@@ -146,8 +146,6 @@ class FileRecordWriterContainer extends RecordWriterContainer {
                 if (baseOutputCommitter.needsTaskCommit(currContext)) {
                     baseOutputCommitter.commitTask(currContext);
                 }
-                org.apache.hadoop.mapred.JobContext currJobContext = HCatMapRedUtil.createJobContext(currContext);
-                baseOutputCommitter.commitJob(currJobContext);
             }
         } else {
             getBaseRecordWriter().close(reporter);
@@ -205,7 +203,7 @@ class FileRecordWriterContainer extends RecordWriterContainer {
                 //As it can throw a FileAlreadyExistsException when more than one mapper is writing to a partition 
                 //See HCATALOG-490, also to avoid contacting the namenode for each new FileOutputFormat instance
                 //In general this should be ok for most FileOutputFormat implementations
-		//but may become an issue for cases when the method is used to perform other setup tasks
+                //but may become an issue for cases when the method is used to perform other setup tasks
 
                 //setupJob()
                 baseOutputCommitter.setupJob(currJobContext);
